# centy-desktop

./: .gitignore  .gitmodules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.centy/: .centy-manifest.json
.centy/issues/11055cfa-42e1-45b8-8a0e-920935384c9e/: issue.md  metadata.json
.centy/issues/1a62ef36-ff97-4d2a-a165-54c125d60a87/: issue.md  metadata.json
.centy/issues/64a4662d-a3ac-4473-8cab-59e48a9991ef/: issue.md  metadata.json
.centy/issues/7484693e-a2d2-4c70-9a8a-b0e043a89642/: issue.md  metadata.json
.centy/issues/b4eeaebf-3855-4833-b0a1-00de5a1f2305/: issue.md  metadata.json
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
